; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/ipu-v3/extr_ipu-dmfc.c_ipu_dmfc_disable_channel.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/ipu-v3/extr_ipu-dmfc.c_ipu_dmfc_disable_channel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dmfc_channel = type { %struct.ipu_dmfc_priv* }
%struct.ipu_dmfc_priv = type { i64, i32, i32 }

@IPU_CONF_DMFC_EN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ipu_dmfc_disable_channel(%struct.dmfc_channel* %0) #0 {
  %2 = alloca %struct.dmfc_channel*, align 8
  %3 = alloca %struct.ipu_dmfc_priv*, align 8
  store %struct.dmfc_channel* %0, %struct.dmfc_channel** %2, align 8
  %4 = load %struct.dmfc_channel*, %struct.dmfc_channel** %2, align 8
  %5 = getelementptr inbounds %struct.dmfc_channel, %struct.dmfc_channel* %4, i32 0, i32 0
  %6 = load %struct.ipu_dmfc_priv*, %struct.ipu_dmfc_priv** %5, align 8
  store %struct.ipu_dmfc_priv* %6, %struct.ipu_dmfc_priv** %3, align 8
  %7 = load %struct.ipu_dmfc_priv*, %struct.ipu_dmfc_priv** %3, align 8
  %8 = getelementptr inbounds %struct.ipu_dmfc_priv, %struct.ipu_dmfc_priv* %7, i32 0, i32 1
  %9 = call i32 @mutex_lock(i32* %8)
  %10 = load %struct.ipu_dmfc_priv*, %struct.ipu_dmfc_priv** %3, align 8
  %11 = getelementptr inbounds %struct.ipu_dmfc_priv, %struct.ipu_dmfc_priv* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = add nsw i64 %12, -1
  store i64 %13, i64* %11, align 8
  %14 = load %struct.ipu_dmfc_priv*, %struct.ipu_dmfc_priv** %3, align 8
  %15 = getelementptr inbounds %struct.ipu_dmfc_priv, %struct.ipu_dmfc_priv* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %24, label %18

18:                                               ; preds = %1
  %19 = load %struct.ipu_dmfc_priv*, %struct.ipu_dmfc_priv** %3, align 8
  %20 = getelementptr inbounds %struct.ipu_dmfc_priv, %struct.ipu_dmfc_priv* %19, i32 0, i32 2
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* @IPU_CONF_DMFC_EN, align 4
  %23 = call i32 @ipu_module_disable(i32 %21, i32 %22)
  br label %24

24:                                               ; preds = %18, %1
  %25 = load %struct.ipu_dmfc_priv*, %struct.ipu_dmfc_priv** %3, align 8
  %26 = getelementptr inbounds %struct.ipu_dmfc_priv, %struct.ipu_dmfc_priv* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = icmp slt i64 %27, 0
  br i1 %28, label %29, label %32

29:                                               ; preds = %24
  %30 = load %struct.ipu_dmfc_priv*, %struct.ipu_dmfc_priv** %3, align 8
  %31 = getelementptr inbounds %struct.ipu_dmfc_priv, %struct.ipu_dmfc_priv* %30, i32 0, i32 0
  store i64 0, i64* %31, align 8
  br label %32

32:                                               ; preds = %29, %24
  %33 = load %struct.ipu_dmfc_priv*, %struct.ipu_dmfc_priv** %3, align 8
  %34 = getelementptr inbounds %struct.ipu_dmfc_priv, %struct.ipu_dmfc_priv* %33, i32 0, i32 1
  %35 = call i32 @mutex_unlock(i32* %34)
  ret void
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @ipu_module_disable(i32, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
